methods.slug.SlugTracking.scala.code
override def run() {
  
def isFacingTrail():Boolean ={
  if (isFacingWall()) {
    return false
  }
  forward()
  if (getGroundColor()==Color.green) {
    return true
  } else {
    backward()
    return false
  }
}
  
var biscuit = 0
while (biscuit==0) {
  while (!isFacingTrail()) {
    left()
  }
  forward()
  if (isOverBaggle()) {
    biscuit = 1
  }
}
}
  